Bug 89451 - missing style based fill property chart area import from XLSX
Summary: missing style based fill property chart area import from XLSX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.5.0 target:4.4.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-18 20:46 UTC by Markus Mohrhard
Modified: 2015-02-19 09:35 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
test document (13.47 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-02-18 20:49 UTC, Markus Mohrhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2015-02-18 20:46:33 UTC
Attached documents shows the issue. Chart Area should be black and not white.
Comment 1 Markus Mohrhard 2015-02-18 20:49:15 UTC
Created attachment 113481 [details]
test document
Comment 2 Commit Notification 2015-02-18 23:09:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a51300bc9223b28fc5da6059e4fe1d2af62fb323

implement fill based on style also for chart area, tdf#89451

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-02-18 23:10:12 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32fe0c6adcff25a0df536127ca980413e1cabefd

better way to set default for chart area fill style, related tdf#89451

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2015-02-18 23:11:58 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9924d94e7db6db50b8b36a311f7d7abf80e4700

add test for missing chart area style fill import, tdf#89451

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-02-19 09:35:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f2cf2212a6a9974da558e97be54b97b49ca039f3&h=libreoffice-4-4

implement fill based on style also for chart area, tdf#89451

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.