implement fill based on style also for chart area, tdf#89451

Change-Id: I7b488e222cd44e75d1e0ff7f8e545e9399f418b5